--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Weather App</title>
 </head>
 
-<body class="bg-background text-foreground font-sans">
+<body>
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
