--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/logo.webp" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-tsrouter-app" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <meta name="description" content="Frontend mentor weather app hackathon submission" />
+    <link rel="apple-touch-icon" href="/logo.webp" />
     <link rel="manifest" href="/manifest.json" />
     <title>Weather App</title>
 </head>
